make.out
src\grammar.y: conflicts: 2 shift/reduce, 1 reduce/reduce
In file included from src/parse.c:8:0:
./include/parse.h:32:4: error: 'value' redeclared as different kind of symbol
  } value;
    ^
In file included from src/parse.c:5:0:
./include/tab.h:42:6: note: previous definition of 'value' was here
      value = 258,
      ^
make: *** [lib/libparse.a] Error 1
